# fine_tune_a6000

./: .gitignore  README.md  pyproject.toml
data/: 01_(무)아이사랑첫보험 (1).json
source/: part.1.ipynb  part.2.ipynb  part.3.ipynb  part.4.ipynb  part.5.ipynb  test.py
source/custom/web_search/: search.py
source/module/: base.py  split_pdf.py  upstage_parser.py
